--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 script:
   - git clone https://github.com/javaminusminus/jmmtravis.git ~/.jmmtravis
-  - ./.jmmtravis/stage
+  - ~/.jmmtravis/stage
 os:
   - linux
   - osx
